[package]
name = "cancer_simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "25.0"
pollster = "0.4"
env_logger = "0.10"
bytemuck = { version = "1.16", features = [ "derive" ] }
flume = "0.11"
rand = "0.9.1"
winit = "0.29"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
crossterm = "0.29"
dialoguer = "0.11"
console = "0.15"